pyAAL/grammar/aal/AALParser.py
# Generated from java-escape by ANTLR 4.4
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .AALListener import AALListener
else:
    from AALListener import AALListener

class AALParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__11=1
    T__10=2
    T__9=3
    T__8=4
    T__7=5
    T__6=6
    T__5=7
    T__4=8
    T__3=9
    T__2=10
    T__1=11
    T__0=12
    D_service=13
    D_agent=14
    D_data=15
    D_clause=16
    D_type=17
    D_types=18
    C_auditing=19
    C_ifviolated=20
    O_or=21
    O_and=22
    O_onlywhen=23
    O_then=24
    O_if=25
    O_not=26
    O_where=27
    O_after=28
    O_before=29
    T_must=30
    T_mustnot=31
    T_always=32
    T_never=33
    T_sometime=34
    T_until=35
    T_unless=36
    T_next=37
    A_permit=38
    A_deny=39
    Q_forall=40
    Q_exists=41
    M_subject=42
    M_rservice=43
    M_pservice=44
    M_purpose=45
    M_extends=46
    M_attr=47
    M_actions=48
    M_macro=49
    M_call=50
    M_load=51
    M_check=52
    M_apply=53
    M_exec=54
    M_behavior=55
    M_env=56
    C_clause=57
    C_usage=58
    C_audit=59
    C_rectification=60
    C_violation=61
    ID=62
    INT=63
    NEWLINE=64
    WS=65
    BLANK=66
    STRING=67
    COMMENT=68
    MLCOMMENT=69
    MCODE=70
    NEGATION=71
    CONJUNCTION=72
    DISJUNCTION=73
    IMPLICATION=74
    EQUIVALENCE=75
    CONSTANTS=76
    PREDICATE=77

    tokenNames = [ "<INVALID>", "']'", "'{'", "')'", "'.'", "'['", "'('", 
                   "':'", "'@'", "'=='", "'/'", "'}'", "'!='", "D_service", 
                   "D_agent", "D_data", "D_clause", "D_type", "D_types", 
                   "C_auditing", "C_ifviolated", "O_or", "O_and", "O_onlywhen", 
                   "O_then", "O_if", "O_not", "O_where", "O_after", "O_before", 
                   "T_must", "T_mustnot", "T_always", "T_never", "T_sometime", 
                   "T_until", "T_unless", "T_next", "A_permit", "A_deny", 
                   "Q_forall", "Q_exists", "M_subject", "M_rservice", "M_pservice", 
                   "M_purpose", "M_extends", "M_attr", "M_actions", "M_macro", 
                   "M_call", "M_load", "M_check", "M_apply", "M_exec", "M_behavior", 
                   "M_env", "C_clause", "C_usage", "C_audit", "C_rectification", 
                   "C_violation", "ID", "INT", "NEWLINE", "WS", "BLANK", 
                   "STRING", "COMMENT", "MLCOMMENT", "MCODE", "NEGATION", 
                   "'&'", "'|'", "IMPLICATION", "EQUIVALENCE", "CONSTANTS", 
                   "PREDICATE" ]

    RULE_h_lpar = 0
    RULE_h_rpar = 1
    RULE_h_lbar = 2
    RULE_h_rbar = 3
    RULE_h_lmar = 4
    RULE_h_rmar = 5
    RULE_h_dot = 6
    RULE_h_colon = 7
    RULE_h_equal = 8
    RULE_h_inequal = 9
    RULE_h_slash = 10
    RULE_h_data = 11
    RULE_h_value = 12
    RULE_h_time = 13
    RULE_h_agentId = 14
    RULE_h_varTypeId = 15
    RULE_h_varId = 16
    RULE_h_dataId = 17
    RULE_h_date = 18
    RULE_h_purposeId = 19
    RULE_h_serviceId = 20
    RULE_h_clauseId = 21
    RULE_h_attribute = 22
    RULE_h_comment = 23
    RULE_h_duration = 24
    RULE_h_parameters = 25
    RULE_h_constant = 26
    RULE_h_type = 27
    RULE_h_variable = 28
    RULE_h_predicate = 29
    RULE_main = 30
    RULE_aalprog = 31
    RULE_declaration = 32
    RULE_agentDec = 33
    RULE_dataDec = 34
    RULE_rsService = 35
    RULE_psService = 36
    RULE_serviceDec = 37
    RULE_varDec = 38
    RULE_attrValue = 39
    RULE_typeDec = 40
    RULE_type_super = 41
    RULE_type_attr = 42
    RULE_type_actions = 43
    RULE_agentType = 44
    RULE_serviceType = 45
    RULE_dataType = 46
    RULE_clause = 47
    RULE_usage = 48
    RULE_audit = 49
    RULE_rectification = 50
    RULE_actionExp = 51
    RULE_actionExp1Action = 52
    RULE_actionExp2notAction = 53
    RULE_actionExp3modalAction = 54
    RULE_actionExp4condition = 55
    RULE_actionExp6Author = 56
    RULE_actionExp7ifthen = 57
    RULE_actionExp8qvar = 58
    RULE_quant = 59
    RULE_qvar = 60
    RULE_booleanOp = 61
    RULE_author = 62
    RULE_ifthen = 63
    RULE_exp = 64
    RULE_condition = 65
    RULE_condition1notExp = 66
    RULE_condition2cmpExp = 67
    RULE_action = 68
    RULE_modal = 69
    RULE_time = 70
    RULE_macro = 71
    RULE_args = 72
    RULE_macroCall = 73
    RULE_exec = 74
    RULE_loadlib = 75
    RULE_behavior = 76
    RULE_ltlCheck = 77
    RULE_check = 78
    RULE_checkApply = 79
    RULE_env = 80
    RULE_atom = 81
    RULE_formula = 82

    ruleNames =  [ "h_lpar", "h_rpar", "h_lbar", "h_rbar", "h_lmar", "h_rmar", 
                   "h_dot", "h_colon", "h_equal", "h_inequal", "h_slash", 
                   "h_data", "h_value", "h_time", "h_agentId", "h_varTypeId", 
                   "h_varId", "h_dataId", "h_date", "h_purposeId", "h_serviceId", 
                   "h_clauseId", "h_attribute", "h_comment", "h_duration", 
                   "h_parameters", "h_constant", "h_type", "h_variable", 
                   "h_predicate", "main", "aalprog", "declaration", "agentDec", 
                   "dataDec", "rsService", "psService", "serviceDec", "varDec", 
                   "attrValue", "typeDec", "type_super", "type_attr", "type_actions", 
                   "agentType", "serviceType", "dataType", "clause", "usage", 
                   "audit", "rectification", "actionExp", "actionExp1Action", 
                   "actionExp2notAction", "actionExp3modalAction", "actionExp4condition", 
                   "actionExp6Author", "actionExp7ifthen", "actionExp8qvar", 
                   "quant", "qvar", "booleanOp", "author", "ifthen", "exp", 
                   "condition", "condition1notExp", "condition2cmpExp", 
                   "action", "modal", "time", "macro", "args", "macroCall", 
                   "exec", "loadlib", "behavior", "ltlCheck", "check", "checkApply", 
                   "env", "atom", "formula" ]

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class H_lparContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_lpar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_lpar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_lpar(self)




    def h_lpar(self):

        localctx = AALParser.H_lparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_h_lpar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(self.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_rparContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_rpar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_rpar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_rpar(self)




    def h_rpar(self):

        localctx = AALParser.H_rparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_h_rpar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(self.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_lbarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_lbar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_lbar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_lbar(self)




    def h_lbar(self):

        localctx = AALParser.H_lbarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_h_lbar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(self.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_rbarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_rbar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_rbar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_rbar(self)




    def h_rbar(self):

        localctx = AALParser.H_rbarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_h_rbar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(self.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_lmarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_lmar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_lmar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_lmar(self)




    def h_lmar(self):

        localctx = AALParser.H_lmarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_h_lmar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(self.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_rmarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_rmar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_rmar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_rmar(self)




    def h_rmar(self):

        localctx = AALParser.H_rmarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_h_rmar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_dotContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_dot

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_dot(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_dot(self)




    def h_dot(self):

        localctx = AALParser.H_dotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_h_dot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(self.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_colonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_colon

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_colon(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_colon(self)




    def h_colon(self):

        localctx = AALParser.H_colonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_h_colon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(self.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_equalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_equal

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_equal(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_equal(self)




    def h_equal(self):

        localctx = AALParser.H_equalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_h_equal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(self.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_inequalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_inequal

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_inequal(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_inequal(self)




    def h_inequal(self):

        localctx = AALParser.H_inequalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_h_inequal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(self.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_slashContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AALParser.RULE_h_slash

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_slash(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_slash(self)




    def h_slash(self):

        localctx = AALParser.H_slashContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_h_slash)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(self.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_dataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AALParser.ID, 0)

        def getRuleIndex(self):
            return AALParser.RULE_h_data

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_data(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_data(self)




    def h_data(self):

        localctx = AALParser.H_dataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_h_data)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def h_constant(self):
            return self.getTypedRuleContext(AALParser.H_constantContext,0)


        def getRuleIndex(self):
            return AALParser.RULE_h_value

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_value(self)




    def h_value(self):

        localctx = AALParser.H_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_h_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190 
            self.h_constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_timeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def h_date(self):
            return self.getTypedRuleContext(AALParser.H_dateContext,0)


        def h_duration(self):
            return self.getTypedRuleContext(AALParser.H_durationContext,0)


        def getRuleIndex(self):
            return AALParser.RULE_h_time

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_time(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_time(self)




    def h_time(self):

        localctx = AALParser.H_timeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_h_time)
        try:
            self.state = 194
            token = self._input.LA(1)
            if token in [self.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 192 
                self.h_date()

            elif token in [self.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 193 
                self.h_duration()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_agentIdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AALParser.ID, 0)

        def getRuleIndex(self):
            return AALParser.RULE_h_agentId

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_agentId(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.exitH_agentId(self)




    def h_agentId(self):

        localctx = AALParser.H_agentIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_h_agentId)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class H_varTypeIdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AALParser.ID, 0)

        def getRuleIndex(self):
            return AALParser.RULE_h_varTypeId

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, AALListener ):
                listener.enterH_varTypeId(self)
